--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <h1 class="project-name">GeoPackage MapCache Android</h1>
       <img class="img" alt="GeoPackage" src="http://ngageoint.github.io/GeoPackage/images/GeoPackage.png" width="128px">
       <h2 class="project-tagline">by the National Geospatial-Intelligence Agency</h2>
-      <a href="https://github.com/ngageoint/geopackage-mapcache-android" class="btn">View on GitHub</a>
-      <a href="https://github.com/ngageoint/geopackage-mapcache-android/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/ngageoint/geopackage-mapcache-android/tarball/master" class="btn">Download .tar.gz</a>
-      <a href="https://github.com/ngageoint/geopackage-mapcache-android/releases/download/1.0/mapcache-1.0.apk" class="btn">Download APK</a>
+      <a href="https://github.com/ngageoint/geopackage-mapcache-android" class="btn">GitHub</a>
+      <a href="https://github.com/ngageoint/geopackage-mapcache-android/releases/download/1.0/mapcache-1.0.apk" class="btn">APK</a>
+      <a href="https://github.com/ngageoint/geopackage-mapcache-android/zipball/master" class="btn">.zip</a>
+      <a href="https://github.com/ngageoint/geopackage-mapcache-android/tarball/master" class="btn">.tar.gz</a>
     </section>
 
     <section class="main-content">
